--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">QrCodeScanner</string>
-
+    <string name="noPermission">No permission for using camera</string>
+    <string name="requestPermissionInfo">"To scan QR codes, please enable Camera permission in your device Settings > Apps > QR Code Scanner > Permissions."</string>
 </resources>
